--- a/views/index.html
+++ b/views/index.html
@@ -11,8 +11,7 @@
 </head>
 <body>
     <div class="container">
-        <p>This is a very simple test harness which posts to [website]</p>
-        <p>Take a look at <em>View Page Source</em> to see how it works</p>
+        <p>Submit a file here to get the size of the file in bytes</p>
         <form id = "uploadForm"
               enctype="multipart/form-data"
               action = "/api/upload"
